<resources>
    <string name="app_name">Bullero</string>


    <string name="label_buy_price">Buy Price</string>
    <string name="label_sell_price">Sell Price</string>
    <string name="label_number_of_share">No. of Shares</string>
    <string name="label_purchasable_shares"># of Purchasable Shares</string>
    <string name="label_break_even_price">Breakeven Price</string>

    <string name="label_buy">Buy</string>
    <string name="label_sell">Sell</string>
    <string name="label_profit_bar">Adjust Target Profit</string>

    <string name="label_total_fee">Total Charges</string>
    <string name="label_total_amount">Total Amount</string>
    <string name="label_total_profit">Gain / Loss</string>
    <string name="label_total_result">Total Average Details</string>
    <string name="label_brokers_computation">Based on your Portfolio</string>
    <string name="label_total_profit_overall">Overall profit</string>

    <string name="label_budget_buying_power">Buying Power (PHP)</string>
    <string name="label_budget_remaining_buying_power">Remaining Buying Power</string>
    <string name="label_budget_ave_price_per_share">Average Price per Share</string>
    <string name="label_budget_calculate_profit">Calculate Target Profit</string>

    <string name="label_details">Purchase Details</string>
    <string name="label_board_lot">Board Lot</string>

    <string name="label_button_compute">Compute</string>
    <string name="label_button_remove">Remove</string>
    <string name="label_button_new_buy">New Buy Transaction</string>

    <string name="label_total_number_of_shares">Total No. of Shares</string>
    <string name="label_total_average_price">Total Average Price</string>

    <string name="label_contact">Contact</string>
    <string name="label_close">Close</string>

    <string name="value_int_zero">0</string>
    <string name="value_double_zero">0.00</string>


    <string name="seekbar_min">-50%</string>
    <string name="seekbar_max">150%</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bullero</string>
    <string name="nav_header_subtitle">Your PSE Stocks Calculator</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
