<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StockPriceCalculatorFragment">

    <LinearLayout
        style="@style/LayoutPadding"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="9">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:weightSum="10">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/label_number_of_share" />

                    <EditText
                        android:id="@+id/editNumberOfShares"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/value_int_zero"
                        android:inputType="number" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:weightSum="10">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/label_buy_price" />

                    <EditText
                        android:id="@+id/editBuyPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/value_double_zero"
                        android:inputType="numberDecimal" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:weightSum="10">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/label_sell_price" />

                    <EditText
                        android:id="@+id/editSellPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/value_double_zero"
                        android:inputType="numberDecimal" />


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            style="@style/LayoutPadding"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:orientation="vertical"
            android:weightSum="10">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5">


                <SeekBar
                    android:id="@+id/seekBarGainPercentage"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:backgroundTint="@color/colorSell"
                    android:max="200"
                    android:progress="50"
                    android:progressBackgroundTint="@color/colorBuy"
                    android:thumbTint="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/seekbar_min"
                    android:textAlignment="viewStart" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/label_profit_bar" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/seekbar_max" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="vertical"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/label_buy"
                        android:gravity="center" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/label_total_fee"
                            android:textAlignment="viewStart" />

                        <TextView
                            android:id="@+id/textBuyTotalFee"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:textAlignment="viewStart"
                            android:text="@string/value_double_zero"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/label_total_amount"
                            android:textAlignment="viewStart" />

                        <TextView
                            android:id="@+id/textBuyTotalAmount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:textAlignment="viewStart"
                            android:text="@string/value_double_zero"/>

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_sell"
                        android:gravity="center" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/label_total_fee"
                            android:textAlignment="viewStart" />

                        <TextView
                            android:id="@+id/textSellTotalFee"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:textAlignment="viewStart"
                            android:text="@string/value_double_zero"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/label_total_amount"
                            android:textAlignment="viewStart" />

                        <TextView
                            android:id="@+id/textSellTotalAmount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:textAlignment="viewStart"
                            android:text="@string/value_double_zero"/>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/label_total_profit"
                            android:textAlignment="viewStart" />

                        <TextView
                            android:id="@+id/textSellTotalProft"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:textAlignment="viewStart"
                            android:text="@string/value_double_zero"/>


                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>